--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@babylonjs/core": "^8.13.0",
+    "@babylonjs/core": "^8.14.0",
+    "@babylonjs/gui": "^8.14.0",
     "@nuxt/content": "^3.6.1",
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/ui": "^3.1.3",
@@ -22,7 +23,7 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@babylonjs/inspector": "^8.13.0",
+    "@babylonjs/inspector": "^8.14.0",
     "@types/seedrandom": "^3.0.8"
   }
 }
